TEOTB-6: Update queryBuilder